force-app/main/default/objects/Anon_Field_Config__mdt/Anon_Field_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configures per-field anonymization strategy. One record per field. Referencing a Strategy_Class_Name__c Apex class that implements IAnonymizationStrategy. No code change required to add a new field — just add a record here.</description>
    <label>Anonymization Field Config</label>
    <pluralLabel>Anonymization Field Configs</pluralLabel>
</CustomObject>