force-app/main/default/objects/Anon_Field_Config__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <label>Execution Order</label>
    <description>Order in which fields are anonymized within a single record. Lower numbers execute first. Useful when one strategy depends on the original value of another field.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>