force-app/main/default/objects/Anon_Field_Config__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <description>API name of the field to anonymize on the parent object (e.g. FirstName, PersonEmail, ACCCO_SocialSecurityNumber__pc).</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>