force-app/main/default/objects/Anon_Field_Config__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field Label</label>
    <description>Human-readable label shown in the LWC preview table.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>