force-app/main/default/objects/Anon_Field_Config__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type (Informational)</label>
    <description>Informational label describing the data type for documentation purposes (e.g. EMAIL, PHONE, NAME, TEXT, IBAN, SSN). NOT used by the engine — only for human reference. The engine uses Strategy_Class_Name__c exclusively.</description>
    <type>Text</type>
    <length>50</length>
</CustomField>