force-app/main/default/objects/Anon_Field_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>When false, this field is excluded from anonymization. Use to temporarily suspend anonymization of a specific field without deleting the config.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>