force-app/main/default/objects/Anon_Field_Config__mdt/fields/Object_Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Config_Name__c</fullName>
    <label>Object Config Developer Name</label>
    <description>DeveloperName of the Anon_Object_Config__mdt record this field belongs to. Must match exactly (case-sensitive).</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>