force-app/main/default/objects/Anon_Field_Config__mdt/fields/Strategy_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Class_Name__c</fullName>
    <label>Strategy Apex Class Name</label>
    <description>Fully-qualified Apex class name that implements IAnonymizationStrategy for this field (e.g. AnonymizePhoneMask, AnonymizeEmailGeneric). The engine instantiates this class dynamically via Type.forName(). To add a new strategy: deploy the Apex class, then reference it here — no changes to existing code.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>