force-app/main/default/objects/Anon_Field_Config__mdt/fields/Strategy_Param_1__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Param_1__c</fullName>
    <label>Strategy Parameter 1</label>
    <description>Optional parameter passed to the strategy class. Interpretation is strategy-specific. Examples: EMAIL_GENERIC uses param1 as the email domain (e.g. "airliquide.com"); SEQUENCE_NUMBER uses param1 as the desired sequence length; LOREM_IPSUM uses param1 as a custom text override.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>