force-app/main/default/objects/Anon_Field_Config__mdt/fields/Strategy_Param_2__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Param_2__c</fullName>
    <label>Strategy Parameter 2</label>
    <description>Optional second parameter passed to the strategy class. Examples: EMAIL_GENERIC uses param2 as the email prefix (e.g. "sf_sap"), producing "sf_sap+{ExternalID}@{param1}".</description>
    <type>Text</type>
    <length>255</length>
</CustomField>